tests/parser/bad/cmodule-contract-cid-lparen-id-with.scilla
scilla_version 0

contract Nothing
(valid with
